:construction: #6 and some fixes